--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://troy379.github.io/portfolio_flutter/build/web/index.html">
+    <meta http-equiv="refresh" content="0; url=build/web/index.html">
   </head>
 </html>
